# scaffold

./: Cargo.toml  README.md
src/: generator.rs  lib.rs  reader.rs  render.rs  skeleton.rs  template.rs
src/reader/: adam_spec.rs  errors.rs  item.rs  project.rs  reader.rs  sdtm_spec.rs  top.rs
src/skeleton/: builder.rs  documents.rs  skeleton.rs  stat.rs
src/template/: version.rs
