[package]
name = "scaffold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
tera = "1.19.1"
calamine = "0.23.1"
chrono = "0.4.31"
serde_json = "1.0.116"
regex = "1.10.4"
